# Nvidia-CLI

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CONTRIBUTING.md  PROGRESS.md  README.md  illustration.py  nv.py  nv_v6.py  pyproject.toml  setup.py
gifs/: agents_gif_demo.html  heartbeat_demo.html  init_chat_demo.html  skills_security_demo.html  soul_identity_demo.html
nv_cli/: __init__.py  __main__.py  cli.py  cli_ask.py  cli_chat.py
nv_cli/agents/: __init__.py  agent.py  registry.py  subagent.py
nv_cli/config/: __init__.py  config.py  loader.py  validation.py
nv_cli/heartbeat/: __init__.py  heartbeat.py  scheduler.py
nv_cli/skills/: __init__.py  installer.py  manager.py  security.py  skill.py
nv_cli/soul/: __init__.py  soul.py  templates.py
nv_cli/tools/: __init__.py  implementations.py  registry.py
nv_cli/utils/: __init__.py  helpers.py
nv_pkg/: __init__.py
